# PiRate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: audit-libraries.yaml  doc-codebase.yaml  doc.yaml  lint-codebase.yaml  lint-pr-title.yaml  lint.yaml  publish-on-tag.yaml  release-please.yaml  release-publish.yaml  security.yaml  tests.yaml
app/: pirate.py
app/lib/: config.py  keyboard.py  logger.py  payloads.py  relay.py  serial_console.py
app/payloads/macos/: serial_shell.py
app/resources/layouts/: us.json
app/tests/: test_config.py  test_keyboard.py  test_logger.py  test_serial_console.py
config/: pirate.cfg.template  wifi.cfg.template
docs/: index.html  pirate.html  search.js
docs/pirate/: lib.html
docs/pirate/lib/: config.html  keyboard.html  logger.html  serial_console.html
pirate/: main.py
pirate/lib/: config.py  keyboard.py  logger.py  serial_console.py
pirate/payloads/macos/: serial_shell.py
src/pirate/: __init__.py  cli.py
src/pirate/lib/: __init__.py  config.py  keyboard.py  logger.py  serial_console.py
tests/: test_cli.py  test_config.py  test_keyboard.py  test_logger.py  test_serial_console.py
