[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pirate"
version = "0.1.0"
description = "USB HID keystroke injection + serial relay toolkit."
readme = "README.md"
license = "LICENSE"
authors = ["Gavin Youker"]

packages = [{ include = "pirate" }]

include = [
  { path = "pirate/resources/layouts/*.json", format = "wheel" },
  { path = "pirate/resources/layouts/*.json", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
colorama = ">=0.4.6"
pyserial = ">=3.5"
psutil = ">=6.1.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.6"

[tool.poetry.scripts]
pirate = "pirate.main:main"
